tried to fix header spacing

--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -35,6 +35,7 @@
         height: 50vh;
         position: relative;
         width: 60%;
+        padding-left: 16px;
         
     }
 
